thêm các file tiện ích, chỉnh sửa lại dashboard cho việc quản lý, thêm theme dark và light, phân trang, sidebar cho app